<resources>
    <string name="app_name">Prayers</string>
    <string name="splash_app_name">.⋆︎✩Prayers ｡ﾟ☁\n\n ｡⋆ ｡ ﾟ 🌙 ﾟ ✩｡ ⋆</string>
    <string name="fajr">Fajr</string>
    <string name="sunrise">Sunrise</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="today_prayers">Today\'s Prayers</string>
    <string name="internnetConnection">Internet not connected..</string>
    <string name="internnetConnectionDialog">Internet not connected.. \n For updated timings, make sure your internet is connected</string>
    <string name="today">Today  </string>
    <string name="qaza_prayer">Qaza Prayers</string>
</resources>